refractor: - Made sure the existing Generator Library is used directly for the rail generator instead of making my own one.
feature:
- The rail generator now generators slower 'async' to make sure it doesn't overload servers.